# OpenDiscon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CONFIGURATION/CL-Windcon/: CMakeLists.txt
CONFIGURATION/CL-Windcon/DISTRIBUTION/DISCON/: CMakeLists.txt
CONFIGURATION/CL-Windcon/DISTRIBUTION/S-Function/: CMakeLists.txt
CONFIGURATION/CL-Windcon/src/discon/: discon.c
CONFIGURATION/CL-Windcon/src/ikClwindconInputMod/: ikClwindconInputMod.c  ikClwindconInputMod.h
CONFIGURATION/CL-Windcon/src/ikClwindconResetSensorSignals/: ikClwindconResetSensorSignals.c  ikClwindconResetSensorSignals.h
CONFIGURATION/CL-Windcon/src/ikClwindconWTCon/: ikClwindconWTCon.c  ikClwindconWTCon.h
CONFIGURATION/CL-Windcon/src/ikClwindconWTConfig/: ikClwindconWTConfig.c  ikClwindconWTConfig.h
CONFIGURATION/CL-Windcon/src/ikPowman/: ikPowman.c
CONFIGURATION/CL-Windcon/src/ikSpdman/: ikSpdman.c  ikSpdman.h
CONFIGURATION/CL-Windcon/src/ikTpman/: ikTpman.c  ikTpman.h
CONFIGURATION/CL-Windcon/src/sfunc/: OpenDiscon_block.mdl  makeOpenDiscon.m  sfunc.c
CONFIGURATION/simple/: CMakeLists.txt
CONFIGURATION/simple/src/discon/: discon.c
CONFIGURATION/simple/src/ikPowman/: ikPowman.c  ikPowman.h
CONFIGURATION/simple/src/ikSimpleWTCon/: ikSimpleWTCon.c  ikSimpleWTCon.h
CONFIGURATION/simple/src/ikSimpleWTConfig/: ikSimpleWTConfig.c  ikSimpleWTConfig.h
CONFIGURATION/simple/src/ikTpman/: ikTpman.c  ikTpman.h
CONFIGURATION/simple/src/sfunc/: OpenDiscon_block.mdl  sfunc.c
CONFIGURATION/static/: CMakeLists.txt
CONFIGURATION/static/src/discon/: discon.c
CONFIGURATION/static/src/ikStaticon/: ikStaticon.c  ikStaticon.h
doc/: CL-Windcon.dox  Doxyfile  OpenDiscon.dox
src/discon/: discon.c
src/ikClwindconWTCon/: ikClwindconWTCon.c  ikClwindconWTCon.h
src/ikClwindconWTConfig/: ikClwindconWTConfig.c  ikClwindconWTConfig.h
src/ikEcnDerating/: ikEcnDerating.c  ikEcnDerating.h
src/ikPowman/: ikPowman.c  ikPowman.h
src/ikTpman/: ikTpman.c  ikTpman.h
src/ikTudIpc/: ikTudFilters.c  ikTudFilters.h  ikTudFunctionToolbox.c  ikTudFunctionToolbox.h  ikTudIpc.c  ikTudIpc.h
